# dotty

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pull_request.yaml
clients/: Cargo.toml
clients/src/file_system/: mod.rs
clients/src/git/: mod.rs
src/: cli.rs  lib.rs  main.rs
src/clients/: file_system.rs  git.rs  mod.rs
src/config/: mod.rs  wizard.rs
src/config/command/: mod.rs  profile.rs  setup.rs
src/ui/: cli.rs  mod.rs
